--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,14 +60,10 @@ jobs:
 
      
 
-      - run:
-          name: Check out the working branch
-          path: ~/klassiG/klassi-js
-          command: git checkout ${CIRCLE_BRANCH}
-
+      
       - run:
           name: Generate dependency cache key
-          command: cat ~/klassiG/klassi-js/package.json ~/klassiG/klassi-js/projects/example-test-suite/package.json > CACHE_KEY
+          command: cat ~/klassi-js/package.json ~klassi-js/projects/example-test-suite/package.json > CACHE_KEY
 
       - restore_cache:
           key: klassi-yarn-cache-{{ checksum "CACHE_KEY" }}
@@ -79,7 +75,7 @@ jobs:
 
       - run:
           name: Install the Project dependencies
-          path: ~/klassiG/klassi-js/projects/example-test-suite
+          path: ~/klassi-js/projects/example-test-suite
           command: yarn install
 
       # Save yarn cache, don't include node modules because we end up with an
@@ -87,21 +83,21 @@ jobs:
       - save_cache:
           paths:
             - ~/.cache/yarn
-            - ~/klassiG/klassi-js/yarn.lock
-            - ~/klassiG/klassi-js/projects/example-test-suite/yarn.lock
+            - ~/klassi-js/yarn.lock
+            - ~/klassi-js/projects/example-test-suite/yarn.lock
           key: klassi-yarn-cache-{{ checksum "CACHE_KEY" }}
 
       - run:
           name: Run acceptance tests
-          path: ~/klassiG/klassi-js/projects/example-test-suite
+          path: ~/klassi-js/projects/example-test-suite
           command: yarn run cilb${STAGE} ${BROWSER}
 
       - store_artifacts:
-          path: ~/klassiG/klassi-js/projects/example-test-suite/artifacts
+          path: ~/klassi-js/projects/example-test-suite/artifacts
 
       - store_test_results:
           command: sleep 2
-          path: ~/klassiG/klassi-js/projects/example-test-suite/reports
+          path: ~/klassi-js/projects/example-test-suite/reports
 
   acceptance_test_chrome:
     <<: *acceptance_test_base
