--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,19 @@ jobs:
 
       # Save yarn cache, don't include node modules because we end up with an
       # archive so large that unarchiving takes longer than the yarn install
-
+      - run:
+          name: Root directory content first
+          command: ls -la
+          
+      - run:
+          name: Checking directory content
+          path: ~/projects/example-test-suite
+          command: ls -la
+          
+      - run:
+          name: Root directory content
+          command: ls -la
+          
       - run:
           name: Run acceptance tests
           path: ~/projects/example-test-suite
