--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,14 @@ jobs:
       - run:
           name: Checkout the klassi-js repo
           command: git clone git@github.com:Prateek-DEL/klassi-js.git
+     
+      - run:
+          name: Root directory for repo after clone
+          command: ls -la
+          
+      - run:
+          name: Change Root directory for repo after clone
+          command: cd klassi-js        
 
       - run:
           name: Check out the working branch
