--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,18 +58,20 @@ jobs:
       - run:
           name: Avoid hosts unknown for github
           command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+      - run:
+          name: Change Root directory for repo after clone
+          command: cd klassi-js
           
       - run:
           name: Checkout the klassi-js repo
+          
           command: git clone git@github.com:Prateek-DEL/klassi-js.git -b master
      
       - run:
           name: Root directory for repo after clone
           command: ls -la
           
-      - run:
-          name: Change Root directory for repo after clone
-          command: cd klassi-js        
+        
 
     
 
@@ -79,7 +81,7 @@ jobs:
 
       - run:
           name: Install the Project dependencies
-          path: ~/projects/example-test-suite
+          path: ~/klassi-js/projects/example-test-suite
           command: yarn install
 
       # Save yarn cache, don't include node modules because we end up with an
@@ -90,7 +92,7 @@ jobs:
           
       - run:
           name: Checking directory content
-          path: ~/projects/example-test-suite
+          path: ~~/klassi-js/projects/example-test-suite
           command: ls -la
           
       - run:
@@ -99,15 +101,15 @@ jobs:
           
       - run:
           name: Run acceptance tests
-          path: ~/projects/example-test-suite
+          path: ~~/klassi-js/projects/example-test-suite
           command: yarn run cilb${STAGE} ${BROWSER}
 
       - store_artifacts:
-          path: ~/projects/example-test-suite/artifacts
+          path: ~~/klassi-js/projects/example-test-suite/artifacts
 
       - store_test_results:
           command: sleep 2
-          path: ~/projects/example-test-suite/reports
+          path: ~~/klassi-js/projects/example-test-suite/reports
 
   acceptance_test_chrome:
     <<: *acceptance_test_base
