--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
       - run:
           name: Checkout the klassi-js repo
           
-          command: git clone git@github.com:Prateek-DEL/klassi-js.git -b master
+          command: git clone https://github.com/Prateek-DEL/klassi-js.git -b master
      
       - run:
           name: Root directory for repo after clone
