--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
         
       - run:
           name: Change roote directory for repo after clone
-          command: cd klassi-js
+          command: cd ~/klassi-js
     
 
       - run:
@@ -78,11 +78,11 @@ jobs:
           
       - run:
           name: Change roote directory for repo after clone
-          command: cd klassi-js/projects/example-test-suite
+          command: cd ~/klassi-js/projects/example-test-suite
 
       - run:
           name: Install the Project dependencies
-          path: ~/projects/example-test-suite
+          path: ~/klassi-js/projects/example-test-suite
           command: yarn install
 
       # Save yarn cache, don't include node modules because we end up with an
@@ -93,7 +93,7 @@ jobs:
           
       - run:
           name: Checking directory content
-          path: ~/projects/example-test-suite
+          path: ~/klassi-js/projects/example-test-suite
           command: ls -la
           
       - run:
@@ -102,15 +102,15 @@ jobs:
           
       - run:
           name: Run acceptance tests
-          path: ~/projects/example-test-suite
+          path: ~/klassi-js/projects/example-test-suite
           command: yarn run cilb${STAGE} ${BROWSER}
 
       - store_artifacts:
-          path: ~/projects/example-test-suite/artifacts
+          path: ~/klassi-js/projects/example-test-suite/artifacts
 
       - store_test_results:
           command: sleep 2
-          path: ~/projects/example-test-suite/reports
+          path: ~/klassi-js/projects/example-test-suite/reports
 
   acceptance_test_chrome:
     <<: *acceptance_test_base
