--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,10 +66,13 @@ jobs:
           name: Root directory for repo after clone
           command: ls -la
           
+      - run:
+          name: pwd command after clone
+          command: pwd          
         
       - run:
           name: Change roote directory for repo after clone
-          command: cd /klassi-js
+          command: cd klassi-js
           
       - run:
           name: changing and Root directory for repo after clone
