add command to check the dir file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
         
       - run:
           name: Change roote directory for repo after clone
-          command: cd klassi-js
+          command: cd /home/circleci/build
           
       - run:
           name: changing and Root directory for repo after clone
