--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
   acceptance_test_base: &acceptance_test_base
     docker:
       - image: circleci/node:12.14.1-browsers
-    working_directory: ~/build
+    working_directory: ~/klassi-js/projects/example-test-suite
     
     steps:
      
@@ -82,10 +82,7 @@ jobs:
           name: changing and Root directory for repo after clone
           command: ls -la
           
-      - run:
-          name: Change roote directory for repo after clone
-          command: cd /home/circleci/build/klassi-js          
-      
+
       - run:
           name: add more pwd
           command: pwd    
@@ -100,7 +97,6 @@ jobs:
 
       - run:
           name: Install the Project dependencies
-          path: ~/klassi-js/projects/example-test-suite
           command: yarn install
 
       # Save yarn cache, don't include node modules because we end up with an
@@ -109,10 +105,6 @@ jobs:
           name: Root directory content first
           command: ls -la
           
-      - run:
-          name: Checking directory content
-          path: ~/klassi-js/projects/example-test-suite
-          command: ls -la
           
       - run:
           name: Root directory content
