--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
       - run:
           name: Check out the working branch
           path: ~/klassiG/klassi-js
-          command: git checkout ${CIRCLE_BRANCH}
+          command: git checkout master
           
       - run:
           name: Generate dependency cache key
