--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,26 +52,19 @@ jobs:
   acceptance_test_base: &acceptance_test_base
     docker:
       - image: circleci/node:12.14.1-browsers
-    working_directory: ~/klassiG
+    working_directory: ~/klassi-js
     
     steps:
      
+      - run:
+          name: changing and Root directory for repo after clone
+          command: ls -la
           
       - run:
           name: Checkout the klassi-js repo
           path: ~/klassi-js/projects/example-test-suite/projects
           command: git clone https://github.com/Prateek-DEL/klassi-js.git
      
-
-          
-      - run:
-          name: Generate dependency cache key
-          command: cat ~/klassiG/klassi-js/package.json ~/klassiG/klassi-js/projects/example-test-suite/package.json > CACHE_KEY          
-        
-
-
-      - restore_cache:
-          key: klassi-yarn-cache-{{ checksum "CACHE_KEY" }}          
           
       - run:
           name: changing and Root directory for repo after clone
