--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,39 @@ jobs:
       - run:
           name: Root directory content first
           command: ls -la
-          
+      - run:
+          name: Check HTTP Server running
+          command: |
+            sleep 10
+            curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9000/
+
+      ##################
+      ## Testing setting up lambdatest to execute and shutdown after testing
+      #################
+      - run:
+          name: Starting Lambdatest Tunnel for testing
+          command: |
+            sudo apt-get update && sudo apt-get install -y curl unzip iproute2 psmisc
+            curl -O https://downloads.lambdatest.com/tunnel/v3/linux/64bit/LT_Linux.zip
+            unzip LT_Linux.zip
+            chmod +x LT
+            rm LT_Linux.zip
+      - run:
+          name: "Executing the tunnel binary"
+          background: true
+          command: |
+            if [ -z "IuCSesD83A7LsTFzEKS0Lb6tzvEfBQ38DMkFTEpudatxxxsdjH" ]; then
+              echo "Error: The parameter lambdatest_key is empty. Please ensure the environment variable LAMBDATEST_KEY has been added."
+              exit 1
+            fi
+            read LOWERPORT UPPERPORT < /proc/sys/net/ipv4/ip_local_port_range
+            PORT=$LOWERPORT
+            while [  $PORT -lt $UPPERPORT ]; do
+                ss -lpn | grep -q ":$PORT " || break
+                let PORT=PORT+1
+            done
+            echo "$PORT" > /tmp/port
+            ./LT --user prateeks@lambdatest.com --key IuCSesD83A7LsTFzEKS0Lb6tzvEfBQ38DMkFTEpudatxxxsdjH --controller circleci --infoAPIPort $PORT --tunnelName Prateek            
           
       - run:
           name: Root directory content
